src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_db8e_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                            DROID: db8e                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌───┐
│ Db…
│   │
│   │
│   │
│   │
│   │
│   │
○ ○ │
… … │
│   │
│   │
│   │
○ ○ │
… …◉○
│  …│
│   │
│   │
○ ○ │
… … │
│   │
│   │
│   │
○ ○ │
… … │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
└───┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 146 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
