src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_db8e_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                            DROID: db8e                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌───┐
│ Db…
││…││
││ ││
││ ││
││ ││
││ ││
││ ││
○│○││
…└…┘│
│   │
│   │
│   │
○ ○ │
… …◉○
│  …│
│   │
│   │
○ ○ │
… … │
│   │
│   │
│   │
○ ○ │
… … │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
└───┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded db8e | Renders degraded at 100 cols — use ≥ 146 cols or reduce scale | Scale: 1.0 | Orienta│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
