src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_g8_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                             DROID: g8                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐
│ C…
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded g8 | Renders degraded at 100 cols — use ≥ 2 cols or reduce scale | Scale: 1.0 | Orientation│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
